<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.ladwa.aditya.contact.ui.newcontact.NewContactActivity"
        tools:showIn="@layout/activity_new_contact">

        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:spb_color="@color/colorAccent"
            app:spb_interpolator="spb_interpolator_accelerate"
            app:spb_mirror_mode="false"
            app:spb_progressiveStart_activated="false"
            app:spb_progressiveStart_speed="1.5"
            app:spb_progressiveStop_speed="3.4"
            app:spb_reversed="false"
            app:spb_sections_count="4"
            app:spb_speed="1.8"
            app:spb_stroke_separator_length="4dp"
            app:spb_stroke_width="4dp"
            />

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="@dimen/image_place_holder_size"
            android:layout_height="@dimen/image_place_holder_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_ten_dp"
            android:onClick="onClickImage"
            android:src="@mipmap/round"
            tools:src="@mipmap/round"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin_small"
            android:layout_marginRight="@dimen/horizontal_margin_small"
            android:layout_marginTop="@dimen/verticle_margin_small">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin_small"
            android:layout_marginRight="@dimen/horizontal_margin_small"
            android:layout_marginTop="@dimen/verticle_margin_small">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin_small"
            android:layout_marginRight="@dimen/horizontal_margin_small"
            android:layout_marginTop="@dimen/verticle_margin_small">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mobile_number"
                android:inputType="phone"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin_small"
            android:layout_marginRight="@dimen/horizontal_margin_small"
            android:layout_marginTop="@dimen/verticle_margin_small">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email_address"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/horizontal_margin_small"
            android:layout_marginTop="@dimen/verticle_margin_small"
            android:onClick="onClickSaveContact"
            android:text="@string/save"/>
    </LinearLayout>
</layout>