<resources>
    <string name="app_name">GoJek-Challenge</string>
    <string name="action_settings">Settings</string>


    <string name="format_firstname_lastname">%1$s %2$s</string>
    <string name="no_internet_message">Not able to connect to Server</string>
    <string name="retry">RETRY</string>
    <string name="no_contact_found">No Contact found</string>
    <string name="title_activity_contact_detail">ContactDetailActivity</string>
    <string name="extra_contact">extra_contact</string>
    <string name="send_message">Send Message</string>
    <string name="share_contact">Share Contact</string>
    <string name="intent_chooser_title_sms">Send SMS</string>
    <string name="intent_chooser_title_email">Send Email</string>
    <string name="no_activity_sms">No activity available to send SMS</string>
    <string name="no_activity_email">No activity available to send Email</string>
    <string name="permission_call">Need Call phone permission to dial phone</string>
    <string name="no_activity_call">No option available to dial phone</string>
    <string name="loading">Loading…</string>
    <string name="placeholder_name">Name:&#160;</string>
    <string name="placeholder_phone">Phone Number:&#160;</string>
    <string name="placeholder_email">Email:&#160;</string>
    <string name="permission_to_create_file">Need permission to create file</string>
    <string name="share_vfc">Share VCF</string>
    <string-array name="contact_share_options">
        <item>Share via SMS</item>
        <item>Share via VCF</item>
    </string-array>
    <string-array name="choose_image_type">
        <item>Capture an Image</item>
        <item>Choose Image from Gallery</item>
    </string-array>
    <string name="title_activity_new_contact">NewContactActivity</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_email_address">Email Address</string>
    <string name="extra_sms_body">sms_body</string>
    <string name="toast_sms">SMS</string>
    <string name="toast_vcf">VCF</string>
    <string name="provider">.provider</string>
    <string name="choose_image">Choose Image</string>
    <string name="camara_permission">Need Camera permission</string>
    <string name="first_name_invalid">First name not valid</string>
    <string name="phone_number_invalid">Enter a valid number</string>
    <string name="email_is_invalid">Enter a valid email</string>
    <string name="choose_image_to_upload">Choose Image to upload</string>
    <string name="cancel">Cancel</string>
    <string name="user_successfully_added">User successfully added</string>
    <string name="error_adding_new_contact">Error occurred while adding new contact</string>
    <string name="save">Save</string>
    <string name="refreshing_contacts">Refreshing Contacts from server</string>
    <string name="no_contacts_received_from_server">No contact Found</string>
    <string name="invalid_last_name">Last name can\'t be blank</string>
    <string name="title_contacts_app">Contacts App</string>
    <string name="title_add_new_contact">Add New Contact</string>
</resources>
